<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/title_background"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/today_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

        <LinearLayout
            android:id="@+id/today_bg"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingLeft="8dp"
            android:paddingRight="17dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/today_lay"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="#fdd835"
                android:gravity="center"
                android:orientation="vertical"
                >

                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >-->
                    <TextView
                        android:id="@+id/today_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_name"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        />

                    <TextView
                        android:id="@+id/today_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="MAR"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        />
                <!--</LinearLayout>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                >

                <RelativeLayout
                    android:id="@+id/today_mobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_networkspeed_mobile" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/today_mobile_flowdata"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123.22"
                                android:textColor="#ffffff"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/today_mobile_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="MB"
                                android:textColor="#ffffff"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/str_mobile"
                            android:textColor="#fdd835"
                            android:textSize="10sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/today_wifi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:layout_marginRight="16dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="right|center_vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_networkspeed_wifi"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="3dp"
                            >
                            <TextView
                                android:id="@+id/today_wifi_flowdata"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123.22"
                                android:textSize="16sp"
                                android:textColor="#ffffff"
                                />

                            <TextView
                                android:id="@+id/today_wifi_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="MB"
                                android:textSize="10sp"
                                android:textColor="#ffffff"
                                />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/str_wifi"
                            android:textSize="10sp"
                            android:textColor="#fdd835"
                            />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/today_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:layout_marginRight="16dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="right|center_vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_networkspeed_total"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="3dp"
                            >
                            <TextView
                                android:id="@+id/today_total_flowdata"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123.22"
                                android:textSize="16sp"
                                android:textColor="#ffffff"
                                />

                            <TextView
                                android:id="@+id/today_total_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="MB"
                                android:textSize="10sp"
                                android:textColor="#ffffff"
                                />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/str_total"
                            android:textSize="10sp"
                            android:textColor="#fdd835"
                            />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abl"
        android:background="#eeeeee"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_month_flowdata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
             />
    </RelativeLayout>

</RelativeLayout>
